--- a/website/index.html
+++ b/website/index.html
@@ -12,63 +12,65 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      height: 100vh;
-      overflow: hidden; /* Lock scroll */
+      overflow: hidden; /* Prevent scrolling beyond hero */
     }
 
     .header {
       position: fixed;
-      top: 6px; /* Moved closer to top */
+      top: 10px;
       left: 50%;
       transform: translateX(-50%);
+      height: 90px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      padding: 0 20px;
+      box-sizing: border-box;
       width: 100%;
       max-width: 1200px;
-      height: 80px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-sizing: border-box;
+      pointer-events: auto;
       z-index: 1100;
+      background: transparent;
     }
 
     .menu-icon {
       position: absolute;
-      left: 16px; /* Spacing from left */
+      left: 10px;
       top: 10px;
-      width: 26px;
+      width: 28px;
       height: auto;
       cursor: pointer;
       z-index: 1101;
     }
 
     .logo {
-      height: 34px; /* Smaller and closer to top */
+      height: 40px;
       cursor: pointer;
-      margin-top: 0px;
+      margin-top: 5px;
       z-index: 1101;
     }
 
     .cart-container {
       position: absolute;
-      right: 16px; /* Spacing from right */
+      right: 10px;
       top: 10px;
+      cursor: pointer;
       width: 28px;
       height: 28px;
       display: flex;
       justify-content: center;
       align-items: center;
-      cursor: pointer;
       z-index: 1101;
     }
 
     .cart-icon {
-      font-size: 24px;
+      font-size: 26px;
       color: white;
+      position: relative;
     }
 
     .cart-count {
@@ -77,14 +79,18 @@
       right: -10px;
       background-color: #8B0000;
       color: white;
+      font-family: Arial, sans-serif;
       font-size: 14px;
       padding: 1px 5px;
       border-radius: 50%;
       display: none;
+      pointer-events: none;
+      user-select: none;
       font-weight: bold;
       min-width: 18px;
       text-align: center;
       line-height: 1.2;
+      text-shadow: 0 0 3px rgba(0,0,0,0.8);
     }
 
     .sidebar {
@@ -124,6 +130,7 @@
     .sidebar-close {
       width: 18px;
       height: auto;
+      display: block;
     }
 
     .overlay {
@@ -154,6 +161,7 @@
       .header {
         height: 70px;
         top: 4px;
+        padding: 0 16px;
       }
 
       .menu-icon {
@@ -164,7 +172,7 @@
 
       .logo {
         height: 28px;
-        margin-top: 0;
+        margin-top: -2px; /* Brought it up on mobile */
       }
 
       .cart-container {
@@ -176,6 +184,17 @@
 
       .cart-icon {
         font-size: 22px;
+      }
+
+      .sidebar-close-container {
+        width: 32px;
+        height: 32px;
+        left: 16px;
+        top: 30px;
+      }
+
+      .sidebar-close {
+        width: 18px;
       }
     }
   </style>
