--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
       margin: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow: hidden; /* Prevent scrolling beyond hero */
+      overflow: hidden;
     }
 
     .header {
@@ -172,7 +172,7 @@
 
       .logo {
         height: 28px;
-        margin-top: -2px; /* Brought it up on mobile */
+        margin-top: 2px; /* Adjusted down slightly to center with icons */
       }
 
       .cart-container {
