--- a/website/index.html
+++ b/website/index.html
@@ -172,7 +172,7 @@
 
       .logo {
         height: 28px;
-        margin-top: 2px; /* Adjusted down slightly to center with icons */
+        margin-top: 5px; /* Adjusted down for better center alignment */
       }
 
       .cart-container {
