--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
       padding: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow: hidden; /* Prevent scrolling off the hero image */
+      overflow: hidden;
     }
 
     .header {
@@ -45,10 +45,10 @@
       height: 40px;
       cursor: pointer;
       z-index: 1101;
-      margin-top: 5px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
+      margin-top: 5px;
     }
 
     .cart-container {
@@ -156,21 +156,21 @@
       }
 
       .menu-icon {
-        width: 28px;
+        width: 26px; /* Slightly smaller */
       }
 
       .logo {
-        height: 28px;
-        margin-top: 6px; /* Slightly lower to align with other icons */
+        height: 26px;
+        margin-top: 3px; /* Raised slightly */
       }
 
       .cart-container {
-        width: 28px;
-        height: 28px;
+        width: 26px;
+        height: 26px;
       }
 
       .cart-icon {
-        font-size: 24px;
+        font-size: 22px;
       }
 
       .sidebar-close-container {
