--- a/website/index.html
+++ b/website/index.html
@@ -153,15 +153,17 @@
       .header {
         top: 8px;
         padding: 0 12px;
+        align-items: center;
       }
 
       .menu-icon {
-        width: 26px; /* Slightly smaller */
+        width: 24px;        /* Smaller width */
+        margin-top: 5px;    /* Slightly lower */
       }
 
       .logo {
         height: 26px;
-        margin-top: 3px; /* Raised slightly */
+        margin-top: 3px;
       }
 
       .cart-container {
