--- a/website/index.html
+++ b/website/index.html
@@ -12,30 +12,37 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: hidden;
     }
 
     .header {
       position: fixed;
       top: 10px;
-      left: 0;
-      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 90px;
       display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-      padding: 0 16px;
+      align-items: center;
+      justify-content: center;
+      padding: 0 20px;
       box-sizing: border-box;
+      width: 100%;
+      max-width: 1200px;
+      pointer-events: auto;
       z-index: 1100;
       background: transparent;
     }
 
     .menu-icon {
-      width: 32px;
+      position: absolute;
+      left: 12px;
+      top: 10px;
+      width: 40px;
       height: auto;
       cursor: pointer;
       z-index: 1101;
@@ -45,16 +52,15 @@
       height: 40px;
       cursor: pointer;
       z-index: 1101;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-top: 5px;
     }
 
     .cart-container {
+      position: absolute;
+      right: 12px;
+      top: 10px;
       cursor: pointer;
-      width: 32px;
-      height: 32px;
+      width: 40px;
+      height: 40px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -64,6 +70,7 @@
     .cart-icon {
       font-size: 28px;
       color: white;
+      position: relative;
     }
 
     .cart-count {
@@ -157,18 +164,20 @@
       }
 
       .menu-icon {
-        width: 24px;        /* Smaller width */
-        margin-top: 5px;    /* Slightly lower */
+        width: 24px;
+        margin-top: 3px; /* slightly raised */
       }
 
       .logo {
         height: 26px;
-        margin-top: 3px;
+        margin-top: 3px; /* slightly adjusted for alignment */
       }
 
       .cart-container {
         width: 26px;
         height: 26px;
+        right: 12px;
+        top: 8px;
       }
 
       .cart-icon {
