--- a/website/index.html
+++ b/website/index.html
@@ -39,6 +39,7 @@
       height: auto;
       cursor: pointer;
       z-index: 1101;
+      filter: brightness(0) invert(1); /* Makes sure the menu icon is white */
     }
 
     .logo {
@@ -157,8 +158,8 @@
       }
 
       .menu-icon {
-        width: 24px;        /* Smaller width */
-        margin-top: 5px;    /* Slightly lower */
+        width: 22px;        /* Slightly smaller */
+        margin-top: 2px;    /* Moved slightly up */
       }
 
       .logo {
