--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,6 @@
       height: auto;
       cursor: pointer;
       z-index: 1101;
-      filter: brightness(0) invert(1); /* Makes sure the menu icon is white */
     }
 
     .logo {
@@ -158,8 +157,8 @@
       }
 
       .menu-icon {
-        width: 22px;        /* Slightly smaller */
-        margin-top: 2px;    /* Moved slightly up */
+        width: 20px;       /* Slightly smaller */
+        margin-top: 5px;   /* Slightly lower to align with logo */
       }
 
       .logo {
