--- a/website/index.html
+++ b/website/index.html
@@ -158,7 +158,8 @@
 
       .menu-icon {
         width: 20px;       /* Slightly smaller */
-        margin-top: 5px;   /* Slightly lower to align with logo */
+        margin-top: 7px;   /* Slightly lower for better alignment */
+        filter: brightness(0) invert(1); /* White color */
       }
 
       .logo {
