--- a/website/index.html
+++ b/website/index.html
@@ -157,9 +157,11 @@
       }
 
       .menu-icon {
-        width: 20px;       /* Slightly smaller */
-        margin-top: 7px;   /* Slightly lower for better alignment */
+        width: 20px;
+        height: 36px; /* Stretched vertically */
+        margin-top: 3px; /* Adjusted top position */
         filter: brightness(0) invert(1); /* White color */
+        object-fit: contain;
       }
 
       .logo {
