--- a/website/index.html
+++ b/website/index.html
@@ -151,27 +151,25 @@
 
     @media screen and (max-width: 600px) {
       .header {
-        top: 8px;
+        top: 6px; /* Moved header up slightly */
         padding: 0 12px;
         align-items: center;
       }
 
       .menu-icon {
-        width: 20px;
-        height: 36px; /* Stretched vertically */
-        margin-top: 3px; /* Adjusted top position */
-        filter: brightness(0) invert(1); /* White color */
-        object-fit: contain;
+        width: 24px;
+        margin-top: 3px; /* Adjusted upward */
       }
 
       .logo {
         height: 26px;
-        margin-top: 3px;
+        margin-top: 1px; /* Adjusted upward */
       }
 
       .cart-container {
         width: 26px;
         height: 26px;
+        margin-top: 4px; /* 1px lower than before */
       }
 
       .cart-icon {
