--- a/website/index.html
+++ b/website/index.html
@@ -39,6 +39,7 @@
       height: auto;
       cursor: pointer;
       z-index: 1101;
+      filter: none; /* reset if any */
     }
 
     .logo {
@@ -159,6 +160,7 @@
       .menu-icon {
         width: 24px;
         margin-top: 3px; /* Adjusted upward */
+        filter: invert(1); /* Make menu icon white like the shopping bag */
       }
 
       .logo {
