--- a/website/index.html
+++ b/website/index.html
@@ -158,9 +158,9 @@
       }
 
       .menu-icon {
-        width: 24px;         /* Slightly smaller */
+        width: 32px;         /* Keep original width */
         margin-top: 3px;     /* Slightly up */
-        filter: none;        /* No color change */
+        filter: brightness(1) invert(1); /* Fully bright white */
       }
 
       .logo {
