--- a/website/index.html
+++ b/website/index.html
@@ -160,7 +160,7 @@
       .menu-icon {
         width: 32px;         /* Keep original width */
         margin-top: 3px;     /* Slightly up */
-        filter: brightness(1) invert(1); /* Fully bright white */
+        filter: brightness(0) invert(1); /* Make menu icon white on mobile */
       }
 
       .logo {
