--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,7 @@
 
   <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  
-  <!-- Font Awesome for shopping bag icon -->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
@@ -31,42 +30,60 @@
       padding: 0 16px;
       box-sizing: border-box;
       z-index: 1100;
-      background: transparent;
     }
 
     .menu-icon {
-      width: 32px;
-      height: auto;
+      width: 24px;
+      height: 24px;
+      position: relative;
       cursor: pointer;
       z-index: 1101;
-      filter: none;
-      transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .menu-icon div {
+      width: 100%;
+      height: 2px;
+      background-color: white;
+      transition: all 0.4s ease-in-out;
+      transform-origin: center;
+    }
+
+    .menu-icon.open div:nth-child(1) {
+      transform: rotate(45deg) translateY(8px);
+    }
+
+    .menu-icon.open div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-icon.open div:nth-child(3) {
+      transform: rotate(-45deg) translateY(-8px);
     }
 
     .logo {
-      height: 36px;
-      cursor: pointer;
-      z-index: 1101;
+      height: 26px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      margin-top: 8px;
+      z-index: 1101;
       transition: opacity 0.3s ease;
     }
 
     .cart-container {
-      cursor: pointer;
-      width: 32px;
-      height: 32px;
+      width: 26px;
+      height: 26px;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       z-index: 1101;
       transition: opacity 0.3s ease;
     }
 
     .cart-icon {
-      font-size: 28px;
+      font-size: 22px;
       color: white;
     }
 
@@ -76,58 +93,31 @@
       right: -10px;
       background-color: #8B0000;
       color: white;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      padding: 1px 5px;
+      font-size: 12px;
+      padding: 1px 4px;
       border-radius: 50%;
       display: none;
-      pointer-events: none;
-      user-select: none;
       font-weight: bold;
-      min-width: 18px;
+      min-width: 16px;
       text-align: center;
-      line-height: 1.2;
     }
 
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
-      width: 250px;
-      height: 100%;
-      background-color: white;
-      font-family: 'Cardo', serif;
-      text-transform: uppercase;
-      padding: 100px 20px 20px 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transition: left 0.15s ease;
+      left: -100vw;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(60, 60, 60, 0.95);
+      color: white;
+      padding: 80px 20px 20px 20px;
+      box-sizing: border-box;
+      transition: left 0.5s ease-in-out;
       z-index: 1000;
-      visibility: hidden;
-      overflow-y: auto;
     }
 
     .sidebar.open {
       left: 0;
-      visibility: visible;
-    }
-
-    .sidebar-close-container {
-      position: absolute;
-      top: 36px;
-      left: 20px;
-      width: 32px;
-      height: 32px;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 1050;
-    }
-
-    .sidebar-close {
-      width: 18px;
-      height: auto;
-      display: block;
     }
 
     .overlay {
@@ -136,7 +126,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: rgba(0,0,0,0.1);
+      background: rgba(0, 0, 0, 0.2);
       display: none;
       z-index: 999;
     }
@@ -154,92 +144,35 @@
       z-index: 1;
     }
 
-    @media screen and (max-width: 600px) {
-      .header {
-        top: 8px;
-        padding: 0 12px;
-        align-items: center;
+    @media screen and (min-width: 601px) {
+      .menu-icon {
+        width: 32px;
+        height: auto;
       }
 
-      /* Sidebar full screen with smoother and slower transition */
+      .logo {
+        height: 36px;
+      }
+
+      .cart-container {
+        width: 32px;
+        height: 32px;
+      }
+
+      .cart-icon {
+        font-size: 28px;
+      }
+
       .sidebar {
-        width: 100vw;
-        height: 100vh;
-        top: 0;
-        left: -100vw;
-        padding: 60px 20px 20px 20px;
-        box-shadow: none;
-        background-color: rgba(60, 60, 60, 0.95);
-        color: white;
-        transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-        overflow-y: auto;
-        visibility: hidden;
+        width: 250px;
+        left: -250px;
+        background: white;
+        color: black;
+        padding: 100px 20px;
       }
 
       .sidebar.open {
         left: 0;
-        visibility: visible;
-      }
-
-      /* Hide logo and cart when sidebar open */
-      .sidebar.open ~ .header .logo,
-      .sidebar.open ~ .header .cart-container {
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      /* Remove sidebar close X container */
-      .sidebar-close-container {
-        display: none;
-      }
-
-      /* Menu icon back to original image size, smaller */
-      .menu-icon {
-        width: 24px !important;
-        height: auto !important;
-        filter: brightness(0) invert(1);
-        transition: filter 0.3s ease;
-      }
-
-      /* Use the original menu icon image again */
-      .menu-icon img {
-        display: block;
-        width: 24px;
-        height: auto;
-      }
-
-      /* Remove hamburger div bars if any */
-      .menu-icon div {
-        display: none !important;
-      }
-
-      /* We’ll use the image and add an X overlay to transform */
-
-      /* Create X lines with pseudo elements on menu icon for toggle */
-      .menu-icon {
-        position: relative;
-      }
-      .menu-icon.open::before,
-      .menu-icon.open::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 24px;
-        height: 2.5px;
-        background-color: white;
-        transition: all 0.4s ease;
-        border-radius: 2px;
-      }
-      .menu-icon.open::before {
-        transform: translateY(-50%) rotate(45deg);
-      }
-      .menu-icon.open::after {
-        transform: translateY(-50%) rotate(-45deg);
-      }
-      /* Hide the original menu icon image when open */
-      .menu-icon.open img {
-        opacity: 0;
       }
     }
   </style>
@@ -250,11 +183,12 @@
 
   <div class="header">
     <div class="menu-icon" id="menuIcon" onclick="toggleSidebar()">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true" alt="Menu Icon" />
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
-    
-    <div class="cart-container" id="cart-icon">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" class="logo" id="mainLogo" />
+    <div class="cart-container" id="cart-container">
       <i class="fas fa-shopping-bag cart-icon"></i>
       <div class="cart-count" id="cart-count">0</div>
     </div>
@@ -273,23 +207,24 @@
     const menuIcon = document.getElementById('menuIcon');
     const sidebar = document.getElementById('sidebar');
     const overlay = document.getElementById('overlay');
+    const logo = document.getElementById('mainLogo');
+    const cart = document.getElementById('cart-container');
 
     function toggleSidebar() {
-      sidebar.classList.toggle('open');
+      const isOpen = sidebar.classList.toggle('open');
       overlay.classList.toggle('show');
       menuIcon.classList.toggle('open');
+
+      // Hide logo and cart when sidebar opens on mobile
+      if (window.innerWidth <= 600) {
+        logo.style.opacity = isOpen ? '0' : '1';
+        cart.style.opacity = isOpen ? '0' : '1';
+      }
     }
 
-    overlay.addEventListener('click', () => {
-      sidebar.classList.remove('open');
-      overlay.classList.remove('show');
-      menuIcon.classList.remove('open');
-    });
-
     const cartCount = document.getElementById('cart-count');
-
     function updateCartCount(count) {
-      if(count > 0) {
+      if (count > 0) {
         cartCount.style.display = 'block';
         cartCount.textContent = count;
       } else {
