--- a/website/index.html
+++ b/website/index.html
@@ -34,21 +34,18 @@
 
     .menu-icon {
       width: 24px;
-      height: 24px;
-      position: relative;
-      cursor: pointer;
-      z-index: 1101;
+      height: 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      cursor: pointer;
+      z-index: 1101;
     }
 
     .menu-icon div {
-      width: 100%;
       height: 2px;
       background-color: white;
       transition: all 0.4s ease-in-out;
-      transform-origin: center;
     }
 
     .menu-icon.open div:nth-child(1) {
@@ -69,7 +66,6 @@
       left: 50%;
       transform: translateX(-50%);
       z-index: 1101;
-      transition: opacity 0.3s ease;
     }
 
     .cart-container {
@@ -79,7 +75,6 @@
       align-items: center;
       justify-content: center;
       z-index: 1101;
-      transition: opacity 0.3s ease;
     }
 
     .cart-icon {
@@ -108,11 +103,11 @@
       left: -100vw;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(60, 60, 60, 0.95);
+      background-color: rgba(60, 60, 60, 0.96); /* slightly translucent gray */
       color: white;
       padding: 80px 20px 20px 20px;
       box-sizing: border-box;
-      transition: left 0.5s ease-in-out;
+      transition: left 0.45s ease-in-out;
       z-index: 1000;
     }
 
@@ -148,6 +143,10 @@
       .menu-icon {
         width: 32px;
         height: auto;
+      }
+
+      .menu-icon div {
+        height: 3px;
       }
 
       .logo {
@@ -187,8 +186,8 @@
       <div></div>
       <div></div>
     </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" class="logo" id="mainLogo" />
-    <div class="cart-container" id="cart-container">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" class="logo" />
+    <div class="cart-container">
       <i class="fas fa-shopping-bag cart-icon"></i>
       <div class="cart-count" id="cart-count">0</div>
     </div>
@@ -207,19 +206,11 @@
     const menuIcon = document.getElementById('menuIcon');
     const sidebar = document.getElementById('sidebar');
     const overlay = document.getElementById('overlay');
-    const logo = document.getElementById('mainLogo');
-    const cart = document.getElementById('cart-container');
 
     function toggleSidebar() {
       const isOpen = sidebar.classList.toggle('open');
       overlay.classList.toggle('show');
       menuIcon.classList.toggle('open');
-
-      // Hide logo and cart when sidebar opens on mobile
-      if (window.innerWidth <= 600) {
-        logo.style.opacity = isOpen ? '0' : '1';
-        cart.style.opacity = isOpen ? '0' : '1';
-      }
     }
 
     const cartCount = document.getElementById('cart-count');
