--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,7 @@
     }
 
     .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg) translate(3px, 3px);
+      transform: rotate(45deg) translate(5px, 5px);
     }
 
     .menu-icon.open div:nth-child(2) {
@@ -59,7 +59,7 @@
     }
 
     .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg) translate(3px, -3px);
+      transform: rotate(-45deg) translate(5px, -5px);
     }
 
     .logo {
@@ -68,7 +68,7 @@
       left: 50%;
       transform: translateX(-50%);
       z-index: 1101;
-      margin-top: 4px;
+      margin-top: 2px; /* raised */
     }
 
     .cart-container {
@@ -78,7 +78,7 @@
       align-items: center;
       justify-content: center;
       z-index: 1101;
-      margin-top: 4px;
+      margin-top: 2px; /* raised slightly */
     }
 
     .cart-icon {
