--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,8 @@
 
   <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  <!-- Font Awesome -->
+  
+  <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
@@ -30,59 +31,39 @@
       padding: 0 16px;
       box-sizing: border-box;
       z-index: 1100;
+      background: transparent;
     }
 
     .menu-icon {
-      width: 20px;
-      height: 16px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      width: 28px;
+      height: auto;
       cursor: pointer;
       z-index: 1101;
-      margin-top: 6px;
-    }
-
-    .menu-icon div {
-      height: 2px;
-      background-color: white;
-      transition: all 0.35s ease-in-out;
-      transform-origin: center;
-    }
-
-    .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .menu-icon.open div:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg) translate(5px, -5px);
+      transition: transform 0.3s ease;
     }
 
     .logo {
-      height: 26px;
+      height: 40px;
+      cursor: pointer;
+      z-index: 1101;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      z-index: 1101;
-      margin-top: 2px; /* raised */
+      margin-top: 5px;
     }
 
     .cart-container {
-      width: 26px;
-      height: 26px;
+      cursor: pointer;
+      width: 32px;
+      height: 32px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       z-index: 1101;
-      margin-top: 2px; /* raised slightly */
     }
 
     .cart-icon {
-      font-size: 22px;
+      font-size: 28px;
       color: white;
     }
 
@@ -92,32 +73,39 @@
       right: -10px;
       background-color: #8B0000;
       color: white;
-      font-size: 12px;
-      padding: 1px 4px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      padding: 1px 5px;
       border-radius: 50%;
       display: none;
+      pointer-events: none;
+      user-select: none;
       font-weight: bold;
-      min-width: 16px;
+      min-width: 18px;
       text-align: center;
+      line-height: 1.2;
     }
 
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100vw;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(60, 60, 60, 0.85);
-      backdrop-filter: blur(8px);
-      color: white;
-      padding: 80px 20px 20px 20px;
-      box-sizing: border-box;
-      transition: left 0.45s ease-in-out;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: rgba(40, 40, 40, 0.85);
+      backdrop-filter: blur(6px);
+      font-family: 'Cardo', serif;
+      text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.4s ease;
       z-index: 1000;
+      visibility: hidden;
     }
 
     .sidebar.open {
       left: 0;
+      visibility: visible;
     }
 
     .overlay {
@@ -126,7 +114,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(0,0,0,0.1);
       display: none;
       z-index: 999;
     }
@@ -144,59 +132,56 @@
       z-index: 1;
     }
 
-    @media screen and (min-width: 601px) {
-      .menu-icon {
-        width: 32px;
-        height: auto;
-        margin-top: 0;
+    @media screen and (max-width: 600px) {
+      .header {
+        top: 8px;
+        padding: 0 12px;
+        align-items: center;
       }
 
-      .menu-icon div {
-        height: 3px;
+      .menu-icon {
+        width: 24px;
+        margin-top: 3px;
+        filter: brightness(0) invert(1);
       }
 
       .logo {
-        height: 36px;
-        margin-top: 0;
+        height: 26px;
+        margin-top: 0px;
       }
 
       .cart-container {
-        width: 32px;
-        height: 32px;
-        margin-top: 0;
+        width: 26px;
+        height: 26px;
+        margin-top: 2px;
       }
 
       .cart-icon {
-        font-size: 28px;
+        font-size: 22px;
       }
 
       .sidebar {
-        width: 250px;
-        left: -250px;
-        background: white;
-        color: black;
-        padding: 100px 20px;
-        backdrop-filter: none;
+        width: 100%;
+        height: 100%;
+        padding-top: 100px;
+        transition: left 0.5s ease;
       }
 
-      .sidebar.open {
-        left: 0;
+      .overlay {
+        display: none !important; /* Disable overlay effect on mobile */
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+  <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
   <div class="header">
-    <div class="menu-icon" id="menuIcon" onclick="toggleSidebar()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" class="logo" />
-    <div class="cart-container">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true" alt="Menu Icon" class="menu-icon" id="menu-icon" onclick="toggleSidebar()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    
+    <div class="cart-container" id="cart-icon">
       <i class="fas fa-shopping-bag cart-icon"></i>
       <div class="cart-count" id="cart-count">0</div>
     </div>
@@ -212,14 +197,25 @@
   <div class="hero-image-box"></div>
 
   <script>
-    const menuIcon = document.getElementById('menuIcon');
     const sidebar = document.getElementById('sidebar');
     const overlay = document.getElementById('overlay');
+    const menuIcon = document.getElementById('menu-icon');
 
     function toggleSidebar() {
+      const isOpen = sidebar.classList.contains('open');
       sidebar.classList.toggle('open');
       overlay.classList.toggle('show');
-      menuIcon.classList.toggle('open');
+
+      // Toggle icon image
+      menuIcon.src = isOpen
+        ? 'https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true'
+        : 'https://github.com/mattscianna/mattscianna/blob/main/X.png?raw=true';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('open');
+      overlay.classList.remove('show');
+      menuIcon.src = 'https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true';
     }
 
     const cartCount = document.getElementById('cart-count');
